--- a/pom.xml
+++ b/pom.xml
@@ -60,11 +60,7 @@
 		    <scope>test</scope>
 		</dependency>
 
-		<dependency>
-	        <groupId>javax.servlet</groupId>
-	        <artifactId>servlet-api</artifactId>
-	        <version>2.5</version>
-    	</dependency>
+		
     	
 	    <dependency>
 	        <groupId>javax.servlet.jsp.jstl</groupId>
@@ -80,8 +76,8 @@
 	    </dependency>
 	    <dependency>
 	        <groupId>javax.servlet</groupId>
-	        <artifactId>servlet-api</artifactId>
-	        <version>2.5</version>
+	        <artifactId>javax.servlet-api</artifactId>
+	        <version>4.0.1</version>
 	        <scope>provided</scope>
 	    </dependency>
 	    <dependency>
